# vectorcade-fonts

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  status.md
vectorcade-fonts/: Cargo.toml
vectorcade-fonts/examples/: show_fonts.rs
vectorcade-fonts/src/: atari.rs  cinematronics.rs  lib.rs  midway.rs  registry.rs  scanline.rs  styles.rs
vectorcade-fonts/src/atari/: digits.rs  letters.rs  mod.rs
vectorcade-fonts/tests/: registry_smoke.rs
