[package]
name = "vectorcade-fonts"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Vector font styles for VectorCade."

[dependencies]
vectorcade-shared = { path = "../../vectorcade-shared/vectorcade-shared" }
glam = { version = "0.27", default-features = false, features = ["libm"] }
